[gd_scene load_steps=19 format=3 uid="uid://cvgwapogciaqb"]

[ext_resource type="Script" uid="uid://bo8lgbe5b5dd6" path="res://levels/objects/door/level_door.gd" id="1_wrywv"]
[ext_resource type="Texture2D" uid="uid://cvh43h5u0tst2" path="res://assets/platform/island/door/closing.png" id="2_lco1g"]
[ext_resource type="Texture2D" uid="uid://1niyxpp3ff46" path="res://assets/platform/island/door/idle.png" id="3_10lxo"]
[ext_resource type="Texture2D" uid="uid://1jxev0yv17bl" path="res://assets/platform/island/door/opening.png" id="4_lutle"]
[ext_resource type="Script" uid="uid://nvuabioddqmj" path="res://scripts/collision/interactive_area_2d.gd" id="5_xiabg"]
[ext_resource type="FontFile" uid="uid://cvsgvp4g00cx1" path="res://assets/font/SVN-Determination Sans.ttf" id="6_lco1g"]

[sub_resource type="LabelSettings" id="LabelSettings_lco1g"]
font_color = Color(0, 1, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpm61"]
atlas = ExtResource("2_lco1g")
region = Rect2(0, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qpce"]
atlas = ExtResource("2_lco1g")
region = Rect2(46, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmx3w"]
atlas = ExtResource("2_lco1g")
region = Rect2(92, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4f8s"]
atlas = ExtResource("4_lutle")
region = Rect2(0, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iylg"]
atlas = ExtResource("4_lutle")
region = Rect2(46, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ubn"]
atlas = ExtResource("4_lutle")
region = Rect2(92, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_laebk"]
atlas = ExtResource("4_lutle")
region = Rect2(138, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3sux"]
atlas = ExtResource("4_lutle")
region = Rect2(184, 0, 46, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_ffxa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpm61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qpce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmx3w")
}],
"loop": false,
"name": &"closing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_10lxo")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4f8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iylg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ubn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laebk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3sux")
}],
"loop": false,
"name": &"opening",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7l4jk"]
size = Vector2(14, 32)

[sub_resource type="LabelSettings" id="LabelSettings_10lxo"]
line_spacing = 5.0
paragraph_spacing = 10.0
font = ExtResource("6_lco1g")
font_size = 13
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)

[node name="LevelDoor" type="Node2D"]
script = ExtResource("1_wrywv")
metadata/_custom_type_script = "uid://cxca7v28gvkyu"

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -80.0
offset_right = 27.5
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 1"
label_settings = SubResource("LabelSettings_lco1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -28)
sprite_frames = SubResource("SpriteFrames_ffxa6")
animation = &"closing"

[node name="InteractiveArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_xiabg")
metadata/_custom_type_script = "uid://nvuabioddqmj"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_7l4jk")

[node name="FLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -50.0
offset_right = 8.5
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
text = "[F]"
label_settings = SubResource("LabelSettings_10lxo")

[connection signal="interacted" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_interacted"]
[connection signal="interaction_available" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_interaction_available"]
[connection signal="interaction_unavailable" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_interaction_unavailable"]
